<resources>
    <string name="AAG_02">Trailer module</string>
    <string name="AAG_F15">Trailer module</string>
    <string name="ABD5">Stability control ABD5</string>
    <string name="ABS5">Anti-lock brake system ABS5</string>
    <string name="ABSMK20">stability control MK20</string>
    <string name="ABSMK4G">Anti-lock Brake System MK4G</string>
    <string name="ACC">Active cruise control</string>
    <string name="ACC2">Active cruise control</string>
    <string name="ACC_E65">Active cruise control</string>
    <string name="ACP_RRS2">Audio Control Panel</string>
    <string name="ACSM2">Crash safety module</string>
    <string name="ACSM3">Crash Safety Module</string>
    <string name="ACSM4">Crash Safety Module</string>
    <string name="ACSM4I">Crash Safety Module</string>
    <string name="ACSM5">Crash Safety Module</string>
    <string name="ACSM6">Crash Safety Module</string>
    <string name="ACSM60">Crash safety module</string>
    <string name="ACSM85">Crash safety module</string>
    <string name="ADCAM_L">Low autonomous driving camera</string>
    <string name="ADCAM_M">Mid autonomous driving camera</string>
    <string name="ADPFRR">Rear Audio Display Panel</string>
    <string name="ADP_RR">Audio Display Panel</string>
    <string name="ADS">ADS</string>
    <string name="AEP">AEP</string>
    <string name="AFS_60">active steering</string>
    <string name="AFS_70">active steering</string>
    <string name="AFS_90">active steering</string>
    <string name="AGS732">Transmission control</string>
    <string name="AGS922">Transmission control</string>
    <string name="AHM_01">Trailer module</string>
    <string name="AHM_70">Trailer module</string>
    <string name="AHM_E65">Trailer module</string>
    <string name="AIC">Automatic Interval Control</string>
    <string name="ALBV60B">active backrest width, front passenger</string>
    <string name="ALBV60F">active backrest width, driver</string>
    <string name="ALC_60">Adaptive Head Light / headlight beam height control</string>
    <string name="ALC_DS2">Adaptive Headlights/headlight beam throw adjustment</string>
    <string name="AL_L">Low beam left</string>
    <string name="AL_R">Low beam right</string>
    <string name="AMPH07">Hi-fi amplifier</string>
    <string name="AMPH10">Hi-fi amplifier</string>
    <string name="AMPH56">Amplifier</string>
    <string name="AMPH70">Amplifier</string>
    <string name="AMPHH2">Amplifier</string>
    <string name="AMPHHB20">Hi-fi amplifier</string>
    <string name="AMPT07">Top HiFi amplifier</string>
    <string name="AMPT10">Top HiFi amplifier</string>
    <string name="AMPT70">Amplifier</string>
    <string name="AMPTHB10">Top HiFi amplifier</string>
    <string name="AMPTHB32">Top HiFi amplifier</string>
    <string name="AMPTLR13">Top HiFi amplifier</string>
    <string name="AMPTLR89">Amplifier</string>
    <string name="AMP_60">Amplifier</string>
    <string name="AMP_E65">Amplifier</string>
    <string name="ANT_60">Antenna tuner</string>
    <string name="ANT_E65">Aerial tuner</string>
    <string name="APM_72">Hybrid DC/DC converter</string>
    <string name="ARS_60">Dynamic drive</string>
    <string name="ARS_70">Dynamic Drive</string>
    <string name="ARS_E65">Dynamic Drive</string>
    <string name="ASA_01">Active steering</string>
    <string name="ASA_71">active steering</string>
    <string name="ASC4GUS">stability control MK4 US</string>
    <string name="ASC5">Stability control ASC5</string>
    <string name="ASC57">Stability control ASC57</string>
    <string name="ASC5D">Stability control ASC5D</string>
    <string name="ASCMK20">stability control MK20</string>
    <string name="ASCMK4">stability control</string>
    <string name="ASCMK4G">stability control MK4</string>
    <string name="ASCMK4G1">stability control</string>
    <string name="ASC_T">stability control</string>
    <string name="ASD_10">Active Sound Design</string>
    <string name="ASD_89">Active Sound Design</string>
    <string name="ASD_I12">Active Sound Design</string>
    <string name="ASK_60">Audio system controller</string>
    <string name="ASK_E65">Audio system controller</string>
    <string name="ATM">Telematic Communication Box</string>
    <string name="ATM02">Telematic Communication Box</string>
    <string name="BAE">Airbag</string>
    <string name="BAR">bar</string>
    <string name="BAT12HAF">Battery electronics 12 volts</string>
    <string name="BAT48FAR">48 volt battery</string>
    <string name="BAT48_15">48 volt battery</string>
    <string name="BATT48">Battery electronics 48 volts</string>
    <string name="BC1">Basic module control unit</string>
    <string name="BC1RD">Basic module control unit</string>
    <string name="BCP01_AP">Basic Central Platform Application Platform</string>
    <string name="BCP_SP21">Basic central platform</string>
    <string name="BC_IV">On-board computer/MID</string>
    <string name="BC_V">On-board computer/MID</string>
    <string name="BDC">Body Domain Controller</string>
    <string name="BDC_G05">Body Domain Controller</string>
    <string name="BDC_G11">Body Domain Controller</string>
    <string name="BEGRL_LINKS_AUSSEN">Sidemarker outer left</string>
    <string name="BEGRL_LINKS_INNEN">Sidemarker inner left</string>
    <string name="BEGRL_RECHTS_AUSSEN">Sidemarker outer right</string>
    <string name="BEGRL_RECHTS_INNEN">Sidemarker inner right</string>
    <string name="BFD_L">Brake Force Display left</string>
    <string name="BFD_R">Brake Force Display right</string>
    <string name="BFH_01">Rear front-passenger side seat module</string>
    <string name="BFH_12">Rear front-passenger side seat module</string>
    <string name="BFH_65_2">Seat module, passenger, rear</string>
    <string name="BFH_E65">Seat module, passenger, rear</string>
    <string name="BFH_G11">Rear front-passenger side seat module</string>
    <string name="BFH_I20">Rear front-passenger side seat module</string>
    <string name="BFH_PLX">Seat module, passenger, rear</string>
    <string name="BFS_01">Front passenger seat module</string>
    <string name="BFS_12">Front passenger seat module</string>
    <string name="BFS_64">Seat memory, front passenger</string>
    <string name="BFS_65_2">Seat module, passenger</string>
    <string name="BFS_E65">Seat module, passenger</string>
    <string name="BFS_G11">Front passenger seat module</string>
    <string name="BFS_I20">Front passenger seat module</string>
    <string name="BFS_PLX">Seat module, passenger</string>
    <string name="BIS01">Headunit Basis</string>
    <string name="BIT">Basis Interface Telephone</string>
    <string name="BIT2">Basis Interface Telephone</string>
    <string name="BIX">Bi-Xenon</string>
    <string name="BIX_L">Bi-Xenon left</string>
    <string name="BIX_R">Bi-Xenon right</string>
    <string name="BL_L">Brake light left</string>
    <string name="BL_M">Brake light center</string>
    <string name="BL_R">Brake light right</string>
    <string name="BM46WIDE">On-board monitor, wideshield</string>
    <string name="BMBT46RN">Navigation radio</string>
    <string name="BMBT46TN">On-board monitor, Top navigation</string>
    <string name="BMBTR50">On-board monitor control panel</string>
    <string name="BMBT_MIR">Multi-Information Radio</string>
    <string name="BMS43DS0">Motor Electronics</string>
    <string name="BMS46DS0">Motor Electronics</string>
    <string name="BMS46DS1">Motor Electronics</string>
    <string name="BMSS501">Motor Electronics</string>
    <string name="BMT01HL">Rear left door control module</string>
    <string name="BMT01HR">Rear right door control module</string>
    <string name="BM_WIDE">On-board monitor, wideshield</string>
    <string name="BORDMONI">On-board monitor</string>
    <string name="BPCM72">Battery check module</string>
    <string name="BSM46C_4">Entrance aid, passenger</string>
    <string name="BSM46C_5">Entrance aid, passenger</string>
    <string name="BZF_I20">Gear selector switch</string>
    <string name="BZMF_E65">Control center, center armrest, rear compartment</string>
    <string name="BZM_E65">Centre console control panel</string>
    <string name="BZM_U06">Gear selector switch</string>
    <string name="B_SM46_3">passenger seat memory</string>
    <string name="B_SM46_4">passenger seat memory</string>
    <string name="CANALLG">CANALLG</string>
    <string name="CANWAY">CANWAY</string>
    <string name="CAN_PL2">CAN_PL2</string>
    <string name="CARB">carb</string>
    <string name="CARBPR">Reporting mit CARBPR (California Air Resources Board)</string>
    <string name="CAS">Car Access System</string>
    <string name="CAS4_2">Car Access System</string>
    <string name="CAS_RR">Car Access System</string>
    <string name="CCCA60">Applications</string>
    <string name="CCCG60">Gateway</string>
    <string name="CCC_60">User interface</string>
    <string name="CCM38">Check-Control Module</string>
    <string name="CCU_01">Combined charging unit</string>
    <string name="CCU_22">Combined charging unit</string>
    <string name="CCU_P1">Combined charging unit</string>
    <string name="CDCD70">CDCD70</string>
    <string name="CDCH70">CD Changer</string>
    <string name="CDC_46">CD Changer</string>
    <string name="CDC_E65">CD Changer</string>
    <string name="CDM02">Coach door module</string>
    <string name="CDM02SL">coach door module, left</string>
    <string name="CDM02SR">coach door module, right</string>
    <string name="CDM_RR21">Coach door module</string>
    <string name="CDM_RR4">Coach door module</string>
    <string name="allow">Allow</string>
    <string name="android_auto_customize_subtitle">Choose functions to display in Android Auto.</string>
    <string name="android_auto_customize_title">Customize Android Auto</string>
    <string name="android_auto_mode_active">Android Auto mode active</string>
    <string name="android_auto_mode_active_description">"To exit Android Auto mode, please navigate back to the Android Auto home screen using your vehicle's display."</string>
    <string name="cancel">Cancel</string>
    <string name="clear_data">Clear cache</string>
    <string name="clear_data_button">clear_data_button</string>
    <string name="connect">Connect</string>
    <string name="extended_scan">Extended Scan</string>
    <string name="extended_scan_description">Scans all known ECU addresses, not just those specific to your vehicle.</string>
    <string name="full_version">BimmerLink full version</string>
    <string name="full_version_description">"The full version unlocks all features for any number of cars and without time limitation.

Please check compatibility with your car and the supported features with the free version before purchasing."</string>
    <string name="full_version_hint">The full version is required for this feature.</string>
    <string name="grant_permission">Grant permissions</string>
    <string name="identifying_ecus">Identifying ECUs…</string>
    <string name="initial_identification_message">BimmerLink is now checking which control units are installed in your car. This can take a few minutes during the first execution.</string>
    <string name="offline_mode">Offline mode</string>
    <string name="permission_denied_write_external_storage">BimmerLink requires access to the external storage on this device to store sensor value log files.</string>
    <string name="protocol">Protocol</string>
    <string name="read_error_memory">Read error memory</string>
    <string name="skip_headunit">Ignore headunit</string>
    <string name="skip_headunit_summary">Enable this setting if your vehicle has an add-on device for CarPlay.</string>
    <string name="theme">Color scheme</string>
    <string name="trouble_shooting">Fix payment issues</string>
    <string name="unit">unit</string>
    <string name="units">Units</string>
    <string name="unlock_coding">Buy full version</string>
    <string name="vehicle_bus">Vehicle bus</string>
</resources>