<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference android:entries="@array/protocol_types" android:title="@string/vehicle_bus" android:key="@string/protocol" android:summary="%s" android:defaultValue="automatic" android:entryValues="@array/protocol_type_values" app:iconSpaceReserved="false" />
    <ListPreference android:entries="@array/themes" android:title="@string/theme" android:key="@string/theme" android:summary="%s" android:defaultValue="blue" android:entryValues="@array/theme_values" app:iconSpaceReserved="false" />
    <ListPreference android:entries="@array/units" android:title="@string/units" android:key="@string/unit" android:summary="%s" android:defaultValue="metric" android:entryValues="@array/unit_values" app:iconSpaceReserved="false" />
    <SwitchPreference android:title="@string/skip_headunit" android:key="skip_headunit" android:summary="@string/skip_headunit_summary" android:defaultValue="false" app:iconSpaceReserved="false" />
    <SwitchPreference android:title="@string/extended_scan" android:key="extended_scan" android:summary="@string/extended_scan_description" android:defaultValue="false" app:iconSpaceReserved="false" />
    <MultiSelectListPreference android:entries="@array/android_auto_functions" android:title="@string/android_auto_customize_title" android:key="@string/android_auto_customize_title" android:summary="@string/android_auto_customize_subtitle" android:defaultValue="@array/android_auto_function_values" android:entryValues="@array/android_auto_function_values" app:iconSpaceReserved="false" />
    <Preference android:title="@string/clear_data" android:key="@string/clear_data_button" app:iconSpaceReserved="false" />
</PreferenceScreen>