<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/purchase_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar android:id="@id/purchase_progress_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:indeterminate="true" style="?android:progressBarStyleHorizontal" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageButton android:id="@id/cancel_purchase_button" android:background="@null" android:layout_width="44.0dip" android:layout_height="44.0dip" android:layout_marginStart="-10.0dip" app:srcCompat="@drawable/ic_close" />
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@null" android:contentDescription="@null" />
        <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" android:textColor="@android:color/white" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/full_version" android:textAlignment="center" />
        <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:id="@id/full_version_hint_text_view" android:paddingBottom="20.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/full_version_hint" android:textAlignment="center" />
        <Button android:textColor="@android:color/white" android:id="@id/purchase_button" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/unlock_coding" app:strokeColor="@android:color/white" style="@style/Widget.MaterialComponents.Button" />
        <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" app:cardBackgroundColor="@color/colorBackground" app:cardCornerRadius="5.0dip" app:contentPadding="20.0dip">
            <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" android:id="@id/full_version_description_text_view" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/full_version_description" />
        </androidx.cardview.widget.CardView>
        <com.google.android.material.button.MaterialButton android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" android:layout_gravity="center" android:id="@id/trouble_shooting_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trouble_shooting" style="@style/Widget.MaterialComponents.Button.TextButton" />
    </LinearLayout>
</LinearLayout>