<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/content_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="?android:dividerHorizontal" android:keepScreenOn="true" android:showDividers="middle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="?android:dividerHorizontal" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:src="@drawable/ic_folder" />
        <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" android:textColor="?android:textColorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/grant_permission" android:textAlignment="center" android:paddingStart="?listPreferredItemPaddingLeft" android:paddingEnd="?listPreferredItemPaddingRight" />
        <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:textColor="?android:textColorSecondary" android:id="@id/notice_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/permission_denied_write_external_storage" android:textAlignment="center" android:layout_marginStart="?listPreferredItemPaddingLeft" android:layout_marginEnd="?listPreferredItemPaddingRight" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="?listPreferredItemPaddingLeft">
        <com.google.android.material.button.MaterialButton android:id="@id/cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" style="@style/Widget.MaterialComponents.Button.TextButton" />
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <com.google.android.material.button.MaterialButton android:ellipsize="end" android:id="@id/allow_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/allow" android:maxLines="1" android:singleLine="true" />
    </LinearLayout>
</LinearLayout>