<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/progress_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
        <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:gravity="center" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/identifying_ecus" android:textAlignment="center" />
        <ProgressBar android:id="@id/progress_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:indeterminate="false" style="?android:progressBarStyleHorizontal" />
        <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" android:textColor="@color/colorSecondaryText" android:gravity="center" android:id="@id/progress_text_view" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textAlignment="center" />
        <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" android:textColor="@color/colorSecondaryText" android:gravity="center" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/initial_identification_message" android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ListView android:id="@id/ecu_group_selection_list_view" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_weight="1.0" />
        <Button android:id="@id/read_error_memory_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_marginTop="5.0dip" android:text="@string/read_error_memory" />
    </LinearLayout>
</RelativeLayout>